# VulnClaw

./: .gitignore  CONTRIBUTING.md  README.md  README_EN.md  VulnClaw开发需求文档.md  VulnClaw改进路线图-CTF与代码审计能力增强.md  VulnClaw测试报告.md  VulnClaw维度检测Bug诊断报告.md  _fix.py  check_filter58.py  conftest.py  fix_filter.py  prep_filter_fix.py  pyproject.toml
tests/: test_agent.py  test_basic.py  test_cli.py  test_config.py  test_kb.py  test_mcp.py  test_report.py  test_skills.py  test_think_fix.py  test_think_fix_v2.py
vulnclaw/: __init__.py
vulnclaw/agent/: ROUND_CONTEXT_FIX.py  anti_loop.py  builtin_tools.py  context.py  core.py  ctf_mode.py  finding_parser.py  input_analysis.py  llm_client.py  loop_controller.py  prompt_context.py  prompts.py  recon_tracker.py  runtime_state.py  system_prompt.py  tool_call_manager.py
vulnclaw/cli/: main.py
vulnclaw/config/: schema.py  settings.py
vulnclaw/kb/: store.py  updater.py
vulnclaw/mcp/: lifecycle.py  registry.py  router.py
vulnclaw/report/: __init__.py  filter.py  generator.py  poc_builder.py  verifier.py
vulnclaw/skills/: crypto_tools.py  dispatcher.py  loader.py
vulnclaw/skills/core/: waf-bypass.md
vulnclaw/skills/specialized/crypto-toolkit/: SKILL.md
vulnclaw/skills/specialized/osint-recon/references/: recon-report-template.md
vulnclaw/skills/specialized/rapid-checklist/: SKILL.md
vulnclaw/skills/specialized/web-security-advanced/: SKILL.md
